Cambio footer remoto
Modificacion del footer agregado de redes sociales y mas de forma remota al repositorio local

--- a/index.html
+++ b/index.html
@@ -70,7 +70,23 @@
 
     
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color">
+    <footer id="footer" class="footer__container--color py-4">
+	<div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-4 text-lg-left">Copyright © revacut 2021</div>
+                <div class="col-lg-4 my-3 my-lg-0">
+                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 XXXX XXXX</div>
+                <div class="col-lg-4 text-lg-right">
+			<a class="mr-3" href="#!">Privacy Policy</a>
+			<a href="#!">Terms of Use</a>
+                </div>
+            </div>
+        </div>
         <p>Copyright &#174; 2021</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
