--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <title>IOT Solutions</title>
     <!-- Insertar Estilos CSS Externos -->
     <link rel="stylesheet" href="./css/styles.css">
-	  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
-
 </head>
 <body class="gridAreasIndex">
-<!--     <header>
-        <h1 class="text-left"><a href="./index.html">IOT Solutions</a> </h1>
-    </header> -->
+
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand nav__brand--setup" href="#"><h1>IOT Solutions</h1></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,25 +66,9 @@
 
     
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color py-4">
-	<div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-left">Copyright © revacut 2021</div>
-                <div class="col-lg-4 my-3 my-lg-0">
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-                <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 XXXX XXXX</div>
-                <div class="col-lg-4 text-lg-right">
-			<a class="mr-3" href="#!">Privacy Policy</a>
-			<a href="#!">Terms of Use</a>
-                </div>
-            </div>
-        </div>
-        <p>Copyright &#174; 2021</p>
-    </footer>
+    <footer id="footer" class="footer__container--color">
+      <p>Copyright &#174; 2021</p>
+  </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
