Se completo para PF

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="gridAreasIndex">
@@ -55,18 +57,21 @@
             <p>
                 Un mundo mas interconectado y conectado a la tecnología, con una nueva forma de vivir.
             </p>
+            <img class="rounded mx-auto d-block" src="/media/vision.jpg" alt="vision">
 
             <h2 class="ourVMV__mision">Misión</h2>
             <p>
                 Proveer a las empresas y usuarios de medios para mejorar la productividad y la calidad de vida
                 respectivamente.
             </p>
+            <img class=" rounded d-block" src="/media/mision.jpg" alt="mision">
 
             <h2 class="ourVMV__valores">Valores</h2>
             <p>
-                Sustentabilidad es nuestro primer valor, siempre con foco en el uso racional de la energia y lods
+                Sustentabilidad es nuestro primer valor, siempre con foco en el uso racional de la energia y los
                 recursos naturales.
             </p>
+            <img class=" rounded d-block" src="/media/valores.jpg" alt="valores">
 
 
 
@@ -75,8 +80,24 @@
 
     </main>
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color">
-        <p>Copyright &#174; 2021</p>
+    <footer id="footer py-4" class="footer__container--color">
+        <!-- <p>Copyright &#174; 2021</p> -->
+        <div class="container">
+          <div class="row align-items-center">
+              <div class="col-lg-4 text-lg-left">Copyright © iot solutions 2021</div>
+              <div class="col-lg-4 my-3 my-lg-0">
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 1234 5678</div>
+              <!-- <div class="col-lg-4 text-lg-right"> -->
+              <!-- <a class="mr-3" href="#!">Privacy Policy</a> -->
+              <!-- <a href="#!">Terms of Use</a> -->
+              <!-- </div> -->
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
