--- a/html/soluciones.html
+++ b/html/soluciones.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-</head>
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+    </head>
 
 <body class="gridAreasIndex">
 
@@ -49,57 +51,46 @@
         <section class="container solutions__container">
             <section id="agroSection" class="agroSectionFlex">
                 <h2>Soluciones para el sector agropecuario</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid
-                    aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium
-                    iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur
-                    aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit
-                    aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>Tenemos soluciones para el sector del agro tanto para agricultura como ganaderia, consultenos para mas informacion.</p>
 
             </section>
 
             <section id="industrySection">
                 <h2>Soluciones para el sector industrial</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid
-                        aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium
-                        iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur
-                        aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit
-                        aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>Proveemos soluciones aplicables a una amplia variedad de industrias.</p>
             </section>
 
             <section id="homeSection">
                 <h2>Soluciones para el sector hogareño</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid
-                        aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium
-                        iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur
-                        aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit
-                        aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>Tenemos tambien solucione apra el hogar.</p>
             </section>
-            <section id="corpSection">
-                <h2>Soluciones para el sector corporativo</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta.
-                        Aliquid aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam
-                        accusantium iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam
-                        cum modi tenetur aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero
-                        cupiditate ullam sit fugit aperiam, illum impedit laboriosam perspiciatis odio totam
-                        molestiae.</span></p>
-            </section>
-
             <section id="specialSection">
                 <h2>Soluciones para proyecto especiales</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta.
-                        Aliquid aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam
-                        accusantium iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam
-                        cum modi tenetur aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero
-                        cupiditate ullam sit fugit aperiam, illum impedit laboriosam perspiciatis odio totam
-                        molestiae.</span></p>
+                <p>Proveemos soluciones para cualquier proyecto que usted tenga en mente, solo consultenos y evualuaremos junto usted su viabilidad.</p>
             </section>
 
         </section>
 
     </main>
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color">
-        <p>Copyright &#174; 2021</p>
+    <footer id="footer py-4" class="footer__container--color">
+        <!-- <p>Copyright &#174; 2021</p> -->
+        <div class="container">
+          <div class="row align-items-center">
+              <div class="col-lg-4 text-lg-left">Copyright © iot solutions 2021</div>
+              <div class="col-lg-4 my-3 my-lg-0">
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 1234 5678</div>
+              <!-- <div class="col-lg-4 text-lg-right"> -->
+              <!-- <a class="mr-3" href="#!">Privacy Policy</a> -->
+              <!-- <a href="#!">Terms of Use</a> -->
+              <!-- </div> -->
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
