--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,6 +8,8 @@
         <!-- Insertar Estilos CSS Externos -->
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
     </head>
     
     <body>
@@ -137,8 +139,24 @@
 
     </main>
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color">
-        <p>Copyright &#174; 2021</p>
+    <footer id="footer py-4" class="footer__container--color">
+        <!-- <p>Copyright &#174; 2021</p> -->
+        <div class="container">
+          <div class="row align-items-center">
+              <div class="col-lg-4 text-lg-left">Copyright © iot solutions 2021</div>
+              <div class="col-lg-4 my-3 my-lg-0">
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 1234 5678</div>
+              <!-- <div class="col-lg-4 text-lg-right"> -->
+              <!-- <a class="mr-3" href="#!">Privacy Policy</a> -->
+              <!-- <a href="#!">Terms of Use</a> -->
+              <!-- </div> -->
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
