--- a/html/productos.html
+++ b/html/productos.html
@@ -8,6 +8,8 @@
     <!-- Insertar Estilos CSS Externos -->
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="gridAreasIndex">
@@ -43,23 +45,39 @@
         <section class="container productos__container" id="products">
             <section id="modules">
                 <h2 class="products-1">Módulos</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>Tenemos una linea estandar de modulos para diferentes propositos IOT y ademas comercializamos modulos IOT a medida para cada necesidad de nuestros clientes.</p>
             </section>
             <section id="parts">
                 <h2 class="products-2">Repuestos</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>A su vez proveemos servicio de postventa con nuesrta linea de repuestos, podemos tambien a pedido reparar equipos de otros proveedores.</p>
             </section>
             <section id="software">
                 <h2 class="products-3">Software</h2>
-                <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi enim ipsam cum dicta. Aliquid aspernatur asperiores laborum rem, a pariatur totam eum in quod libero cum numquam accusantium iste quos!</span><span>Illo, voluptatum. Natus, doloribus necessitatibus veniam cum modi tenetur aspernatur alias! Aut labore fugiat et consequatur voluptatem, libero cupiditate ullam sit fugit aperiam, illum impedit laboriosam perspiciatis odio totam molestiae.</span></p>
+                <p>Ademas comercializamos nuestro propio software desarrollado por nuestros programadores para complementar las soluciones IOT con su industria o aplicacion cualquiera sea.</p>
             </section>
         </section>
 
     </main>
 
     <!-- Píe de página -->
-    <footer id="footer" class="footer__container--color">
-        <p>Copyright &#174; 2021</p>
+    <footer id="footer py-4" class="footer__container--color">
+        <!-- <p>Copyright &#174; 2021</p> -->
+        <div class="container">
+          <div class="row align-items-center">
+              <div class="col-lg-4 text-lg-left">Copyright © iot solutions 2021</div>
+              <div class="col-lg-4 my-3 my-lg-0">
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="col-lg-4 text-lg-right">Teléfono: (+549) 11 1234 5678</div>
+              <!-- <div class="col-lg-4 text-lg-right"> -->
+              <!-- <a class="mr-3" href="#!">Privacy Policy</a> -->
+              <!-- <a href="#!">Terms of Use</a> -->
+              <!-- </div> -->
+          </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
