se corriegio path imagenes

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -57,21 +57,21 @@
             <p>
                 Un mundo mas interconectado y conectado a la tecnología, con una nueva forma de vivir.
             </p>
-            <img class="rounded mx-auto d-block" src="/media/vision.jpg" alt="vision">
+            <img class="rounded mx-auto d-block" src="../media/vision.jpg" alt="vision">
 
             <h2 class="ourVMV__mision">Misión</h2>
             <p>
                 Proveer a las empresas y usuarios de medios para mejorar la productividad y la calidad de vida
                 respectivamente.
             </p>
-            <img class=" rounded d-block" src="/media/mision.jpg" alt="mision">
+            <img class=" rounded d-block" src="../media/mision.jpg" alt="mision">
 
             <h2 class="ourVMV__valores">Valores</h2>
             <p>
                 Sustentabilidad es nuestro primer valor, siempre con foco en el uso racional de la energia y los
                 recursos naturales.
             </p>
-            <img class=" rounded d-block" src="/media/valores.jpg" alt="valores">
+            <img class=" rounded d-block" src="../media/valores.jpg" alt="valores">
 
 
 
